--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,84 +115,7 @@ img {
     }
   }
 
-  //   Home Section B
-  &-b {
-    .stats {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-
-      li {
-        line-height: 2;
-        &.stats-title {
-          font-size: 1.5rem;
-        }
-        &stats-number {
-          font-size: 2rem;
-          font-weight: bold;
-        }
-      }
-      div {
-        padding: 3rem;
-
-        &:nth-child(odd) {
-          background: $light-color;
-        }
-        &:nth-child(even) {
-          background: $medium-color;
-        }
-      }
-    }
-  }
-  // Home section C
-
-  &-c {
-    .process {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 1.5rem;
-      text-align: center;
-
-      &-step {
-        position: absolute;
-        top: 0;
-        right: 0;
-        font-size: 28px;
-        background: $main-color;
-        color: set-text-color($main-color);
-        border-radius: 50%;
-        height: 15px;
-        width: 15px;
-        line-height: 15px;
-        padding: 1rem;
-        transition: all 0.3s;
-      }
-
-      &-icon {
-        border-radius: 50%;
-        background: $dark-color;
-        color: set-text-color($dark-color);
-        padding: 2rem;
-        width: 70px;
-        height: 70px;
-        line-height: 70px;
-        text-align: center;
-        position: relative;
-        transition: all 0.3s;
-
-        &:hover {
-          background: $main-color;
-          width: 90px;
-          height: 90px;
-          line-height: 90px;
-
-          .process-step {
-            background: $dark-color;
-            color: set-text-color($dark-color);
-          }
-        }
-      }
-    }
-  }
+  
 }
 
 // About Sections
@@ -254,99 +177,7 @@ img {
       }
     }
   }
-
-  // About C
-  &-c {
-    .about-logos {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 2rem;
-
-      img {
-        width: 80%;
-      }
-    }
-  }
-
-  // About D
-  &-d {
-    .testimonials {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 0.5rem;
-    }
-    ul {
-      list-style-type: none;
-      margin-top: 1rem;
-      display: flex;
-      align-items: center;
-    }
-    p {
-      border: 1px solid $medium-color;
-      border-radius: 5px;
-      padding: 0.5rem;
-    }
-    img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      margin-right: 0.5rem;
-    }
-  }
 }
-// Contact Page
-#contact {
-  &-a {
-    .text-fields {
-      display: grid;
-      grid-template-areas:
-        "name email"
-        "subject phone"
-        "message message";
-      grid-gap: 1.2rem;
-      margin-bottom: 1.2rem;
-
-      // Grid Areas
-      .name-input {
-        grid-area: name;
-      }
-      .subject-input {
-        grid-area: subject;
-      }
-      .email-input {
-        grid-area: email;
-      }
-      .phone-input {
-        grid-area: phone;
-      }
-      .message-input {
-        grid-area: message;
-        height: 100px;
-      }
-
-      .text-input {
-        padding: 0.5rem 1rem;
-      }
-    }
-    button[type="submit"] {
-      width: 50%;
-    }
-  }
-  &-b {
-    .contact-info {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      text-align: center;
-    }
-  }
-  &-c {
-    h1 {
-      text-align: center;
-      font-size: 4rem;
-    }
-  }
-}
-
 // Footer
 
 #main-footer {
@@ -360,7 +191,8 @@ img {
     height: 5rem;
     align-items: center;
 
-    .social .fab {
+    .social a {
+      color: white;
       margin-right: 1rem;
       border: 2px white solid;
       border-radius: 50%;
